refactoring split_feat some more for functionality.

--- a/explorations/model.ipynb
+++ b/explorations/model.ipynb
@@ -36,6 +36,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Trip_Distance_km</th>\n",
+       "      <th>Passenger_Count</th>\n",
        "      <th>Base_Fare</th>\n",
        "      <th>Per_Km_Rate</th>\n",
        "      <th>Per_Minute_Rate</th>\n",
@@ -52,6 +53,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>19.350000</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>3.560000</td>\n",
        "      <td>0.80</td>\n",
        "      <td>0.32</td>\n",
@@ -66,6 +68,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>47.590000</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>3.502989</td>\n",
        "      <td>0.62</td>\n",
        "      <td>0.43</td>\n",
@@ -80,6 +83,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>36.870000</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>2.700000</td>\n",
        "      <td>1.21</td>\n",
        "      <td>0.15</td>\n",
@@ -94,6 +98,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30.330000</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>3.480000</td>\n",
        "      <td>0.51</td>\n",
        "      <td>0.15</td>\n",
@@ -108,6 +113,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>27.070547</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>2.930000</td>\n",
        "      <td>0.63</td>\n",
        "      <td>0.32</td>\n",
@@ -124,12 +130,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   Trip_Distance_km  Base_Fare  Per_Km_Rate  Per_Minute_Rate  \\\n",
-       "0         19.350000   3.560000         0.80             0.32   \n",
-       "1         47.590000   3.502989         0.62             0.43   \n",
-       "2         36.870000   2.700000         1.21             0.15   \n",
-       "3         30.330000   3.480000         0.51             0.15   \n",
-       "4         27.070547   2.930000         0.63             0.32   \n",
+       "   Trip_Distance_km  Passenger_Count  Base_Fare  Per_Km_Rate  Per_Minute_Rate  \\\n",
+       "0         19.350000              3.0   3.560000         0.80             0.32   \n",
+       "1         47.590000              1.0   3.502989         0.62             0.43   \n",
+       "2         36.870000              1.0   2.700000         1.21             0.15   \n",
+       "3         30.330000              4.0   3.480000         0.51             0.15   \n",
+       "4         27.070547              3.0   2.930000         0.63             0.32   \n",
        "\n",
        "   Trip_Duration_Minutes  Time_of_Day_Afternoon  Day_of_Week_Weekday  \\\n",
        "0                  53.82                  False                 True   \n",
@@ -278,13 +284,13 @@
    ],
    "source": [
     "\n",
-    "X, df_numeric, df_boolean, df_categorical, y = split_features_target(df)\n",
+    "X, df_numeric, df_boolean, df_categorical, df_target, y = split_features_target(df)\n",
     "df_boolean.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9abdab0d",
    "metadata": {},
    "outputs": [
@@ -310,6 +316,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Trip_Distance_km</th>\n",
+       "      <th>Passenger_Count</th>\n",
        "      <th>Base_Fare</th>\n",
        "      <th>Per_Km_Rate</th>\n",
        "      <th>Per_Minute_Rate</th>\n",
@@ -325,6 +332,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>19.350000</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>3.560000</td>\n",
        "      <td>0.80</td>\n",
        "      <td>0.32</td>\n",
@@ -338,6 +346,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>47.590000</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>3.502989</td>\n",
        "      <td>0.62</td>\n",
        "      <td>0.43</td>\n",
@@ -351,6 +360,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>36.870000</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>2.700000</td>\n",
        "      <td>1.21</td>\n",
        "      <td>0.15</td>\n",
@@ -364,6 +374,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30.330000</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>3.480000</td>\n",
        "      <td>0.51</td>\n",
        "      <td>0.15</td>\n",
@@ -377,6 +388,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>27.070547</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>2.930000</td>\n",
        "      <td>0.63</td>\n",
        "      <td>0.32</td>\n",
@@ -392,12 +404,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   Trip_Distance_km  Base_Fare  Per_Km_Rate  Per_Minute_Rate  \\\n",
-       "0         19.350000   3.560000         0.80             0.32   \n",
-       "1         47.590000   3.502989         0.62             0.43   \n",
-       "2         36.870000   2.700000         1.21             0.15   \n",
-       "3         30.330000   3.480000         0.51             0.15   \n",
-       "4         27.070547   2.930000         0.63             0.32   \n",
+       "   Trip_Distance_km  Passenger_Count  Base_Fare  Per_Km_Rate  Per_Minute_Rate  \\\n",
+       "0         19.350000              3.0   3.560000         0.80             0.32   \n",
+       "1         47.590000              1.0   3.502989         0.62             0.43   \n",
+       "2         36.870000              1.0   2.700000         1.21             0.15   \n",
+       "3         30.330000              4.0   3.480000         0.51             0.15   \n",
+       "4         27.070547              3.0   2.930000         0.63             0.32   \n",
        "\n",
        "   Trip_Duration_Minutes  Time_of_Day_Afternoon  Day_of_Week_Weekday  \\\n",
        "0                  53.82                  False                 True   \n",
@@ -469,7 +481,7 @@
     {
      "data": {
       "text/plain": [
-       "((800, 10), (200, 10))"
+       "((800, 11), (200, 11))"
       ]
      },
      "execution_count": 5,
@@ -518,7 +530,7 @@
     "    {\"name\": \"lasso\", \"model\": Lasso(), \"scale\": True},\n",
     "    {\"name\": \"knn\", \"model\": KNeighborsRegressor(), \"scale\": True},\n",
     "    {\"name\": \"svr\", \"model\": SVR(), \"scale\": True},\n",
-    "    #{\"name\": \"mlp\", \"model\": MLPRegressor(max_iter=5000, random_state=42), \"scale\": True}, # commented for time resource management\n",
+    "    #{\"name\": \"mlp\", \"model\": MLPRegressor(max_iter=5000, random_state=42), \"scale\": True}, # To slow for school\n",
     "    {\"name\": \"xgb\", \"model\": XGBRegressor(random_state=42), \"scale\": True},\n",
     "    {\"name\": \"rf\", \"model\": RandomForestRegressor(random_state=42), \"scale\": False},\n",
     "])"
@@ -585,13 +597,13 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>xgb</td>\n",
-       "      <td>0.868</td>\n",
+       "      <td>0.869</td>\n",
        "      <td>0.909</td>\n",
-       "      <td>0.041</td>\n",
-       "      <td>4.975</td>\n",
-       "      <td>55.201</td>\n",
-       "      <td>7.430</td>\n",
-       "      <td>0.89</td>\n",
+       "      <td>0.040</td>\n",
+       "      <td>4.981</td>\n",
+       "      <td>54.979</td>\n",
+       "      <td>7.415</td>\n",
+       "      <td>0.81</td>\n",
        "      <td>{'model__learning_rate': 0.05, 'model__max_dep...</td>\n",
        "      <td>(StandardScaler(), XGBRegressor(base_score=Non...</td>\n",
        "    </tr>\n",
@@ -601,22 +613,22 @@
        "      <td>0.861</td>\n",
        "      <td>0.904</td>\n",
        "      <td>0.043</td>\n",
-       "      <td>5.505</td>\n",
-       "      <td>58.413</td>\n",
-       "      <td>7.643</td>\n",
-       "      <td>2.32</td>\n",
-       "      <td>{'model__max_depth': 20, 'model__n_estimators'...</td>\n",
-       "      <td>((DecisionTreeRegressor(max_depth=20, max_feat...</td>\n",
+       "      <td>5.497</td>\n",
+       "      <td>58.358</td>\n",
+       "      <td>7.639</td>\n",
+       "      <td>2.17</td>\n",
+       "      <td>{'model__max_depth': None, 'model__n_estimator...</td>\n",
+       "      <td>((DecisionTreeRegressor(max_features=1.0, rand...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>svr</td>\n",
-       "      <td>0.831</td>\n",
+       "      <td>0.830</td>\n",
        "      <td>0.857</td>\n",
-       "      <td>0.025</td>\n",
-       "      <td>6.721</td>\n",
-       "      <td>87.076</td>\n",
-       "      <td>9.331</td>\n",
+       "      <td>0.027</td>\n",
+       "      <td>6.716</td>\n",
+       "      <td>86.814</td>\n",
+       "      <td>9.317</td>\n",
        "      <td>0.16</td>\n",
        "      <td>{'model__C': 10, 'model__kernel': 'linear'}</td>\n",
        "      <td>(StandardScaler(), SVR(C=10, kernel='linear'))</td>\n",
@@ -625,11 +637,11 @@
        "      <th>2</th>\n",
        "      <td>lasso</td>\n",
        "      <td>0.832</td>\n",
-       "      <td>0.852</td>\n",
-       "      <td>0.020</td>\n",
-       "      <td>6.983</td>\n",
-       "      <td>89.579</td>\n",
-       "      <td>9.465</td>\n",
+       "      <td>0.854</td>\n",
+       "      <td>0.022</td>\n",
+       "      <td>6.949</td>\n",
+       "      <td>88.894</td>\n",
+       "      <td>9.428</td>\n",
        "      <td>0.04</td>\n",
        "      <td>{'model__alpha': 0.1}</td>\n",
        "      <td>(StandardScaler(), Lasso(alpha=0.1))</td>\n",
@@ -637,39 +649,39 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>ridge</td>\n",
-       "      <td>0.832</td>\n",
-       "      <td>0.852</td>\n",
-       "      <td>0.021</td>\n",
-       "      <td>6.989</td>\n",
-       "      <td>89.691</td>\n",
-       "      <td>9.471</td>\n",
-       "      <td>2.07</td>\n",
-       "      <td>{'model__alpha': 0.1}</td>\n",
-       "      <td>(StandardScaler(), Ridge(alpha=0.1))</td>\n",
+       "      <td>0.831</td>\n",
+       "      <td>0.854</td>\n",
+       "      <td>0.023</td>\n",
+       "      <td>6.942</td>\n",
+       "      <td>88.697</td>\n",
+       "      <td>9.418</td>\n",
+       "      <td>1.81</td>\n",
+       "      <td>{'model__alpha': 1.0}</td>\n",
+       "      <td>(StandardScaler(), Ridge())</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>linear</td>\n",
-       "      <td>0.832</td>\n",
-       "      <td>0.852</td>\n",
-       "      <td>0.021</td>\n",
-       "      <td>6.989</td>\n",
-       "      <td>89.693</td>\n",
-       "      <td>9.471</td>\n",
-       "      <td>2.63</td>\n",
+       "      <td>0.831</td>\n",
+       "      <td>0.854</td>\n",
+       "      <td>0.023</td>\n",
+       "      <td>6.940</td>\n",
+       "      <td>88.714</td>\n",
+       "      <td>9.419</td>\n",
+       "      <td>2.43</td>\n",
        "      <td>{'model__fit_intercept': True}</td>\n",
        "      <td>(StandardScaler(), LinearRegression())</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>knn</td>\n",
-       "      <td>0.585</td>\n",
-       "      <td>0.707</td>\n",
-       "      <td>0.122</td>\n",
-       "      <td>10.250</td>\n",
-       "      <td>177.856</td>\n",
-       "      <td>13.336</td>\n",
-       "      <td>0.08</td>\n",
+       "      <td>0.569</td>\n",
+       "      <td>0.680</td>\n",
+       "      <td>0.111</td>\n",
+       "      <td>10.931</td>\n",
+       "      <td>194.437</td>\n",
+       "      <td>13.944</td>\n",
+       "      <td>0.07</td>\n",
        "      <td>{'model__n_neighbors': 7}</td>\n",
        "      <td>(StandardScaler(), KNeighborsRegressor(n_neigh...</td>\n",
        "    </tr>\n",
@@ -679,29 +691,29 @@
       ],
       "text/plain": [
        "    model  cv_R2  test_R2  delta_cv_test  test_MAE  test_MSE  test_RMSE  \\\n",
-       "5     xgb  0.868    0.909          0.041     4.975    55.201      7.430   \n",
-       "6      rf  0.861    0.904          0.043     5.505    58.413      7.643   \n",
-       "4     svr  0.831    0.857          0.025     6.721    87.076      9.331   \n",
-       "2   lasso  0.832    0.852          0.020     6.983    89.579      9.465   \n",
-       "1   ridge  0.832    0.852          0.021     6.989    89.691      9.471   \n",
-       "0  linear  0.832    0.852          0.021     6.989    89.693      9.471   \n",
-       "3     knn  0.585    0.707          0.122    10.250   177.856     13.336   \n",
+       "5     xgb  0.869    0.909          0.040     4.981    54.979      7.415   \n",
+       "6      rf  0.861    0.904          0.043     5.497    58.358      7.639   \n",
+       "4     svr  0.830    0.857          0.027     6.716    86.814      9.317   \n",
+       "2   lasso  0.832    0.854          0.022     6.949    88.894      9.428   \n",
+       "1   ridge  0.831    0.854          0.023     6.942    88.697      9.418   \n",
+       "0  linear  0.831    0.854          0.023     6.940    88.714      9.419   \n",
+       "3     knn  0.569    0.680          0.111    10.931   194.437     13.944   \n",
        "\n",
        "   train_time_sec                                        best_params  \\\n",
-       "5            0.89  {'model__learning_rate': 0.05, 'model__max_dep...   \n",
-       "6            2.32  {'model__max_depth': 20, 'model__n_estimators'...   \n",
+       "5            0.81  {'model__learning_rate': 0.05, 'model__max_dep...   \n",
+       "6            2.17  {'model__max_depth': None, 'model__n_estimator...   \n",
        "4            0.16        {'model__C': 10, 'model__kernel': 'linear'}   \n",
        "2            0.04                              {'model__alpha': 0.1}   \n",
-       "1            2.07                              {'model__alpha': 0.1}   \n",
-       "0            2.63                     {'model__fit_intercept': True}   \n",
-       "3            0.08                          {'model__n_neighbors': 7}   \n",
+       "1            1.81                              {'model__alpha': 1.0}   \n",
+       "0            2.43                     {'model__fit_intercept': True}   \n",
+       "3            0.07                          {'model__n_neighbors': 7}   \n",
        "\n",
        "                                      best_estimator  \n",
        "5  (StandardScaler(), XGBRegressor(base_score=Non...  \n",
-       "6  ((DecisionTreeRegressor(max_depth=20, max_feat...  \n",
+       "6  ((DecisionTreeRegressor(max_features=1.0, rand...  \n",
        "4     (StandardScaler(), SVR(C=10, kernel='linear'))  \n",
        "2               (StandardScaler(), Lasso(alpha=0.1))  \n",
-       "1               (StandardScaler(), Ridge(alpha=0.1))  \n",
+       "1                        (StandardScaler(), Ridge())  \n",
        "0             (StandardScaler(), LinearRegression())  \n",
        "3  (StandardScaler(), KNeighborsRegressor(n_neigh...  "
       ]
@@ -724,7 +736,7 @@
    "source": [
     "###  result \n",
     "\n",
-    "opted for XGBoost (might revisit SVR depending on time left till deadline) despite SVR (based on complexity) and MLP (Slow and resource demanding) scored higher"
+    "opted for XGBoost wich scored best."
    ]
   },
   {
