--- a/explorations/data_cleaning.ipynb
+++ b/explorations/data_cleaning.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "id": "f60e5763",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "id": "1b1db0bf",
    "metadata": {},
    "outputs": [
@@ -138,13 +138,13 @@
        "4                  22.64  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_numeric, df_categorical, df_target = split_features_target(df)\n",
+    "X, df_numeric, df_boolean, df_categorical, df_target, y = split_features_target(df)\n",
     "df_numeric.head()"
    ]
   },
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "id": "80a2438a",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "id": "dd3dbaa5",
    "metadata": {},
    "outputs": [
@@ -203,14 +203,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "46bc2c69",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "74ca97b2",
    "metadata": {},
@@ -220,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "id": "1cbff0b2",
    "metadata": {},
    "outputs": [],
@@ -238,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "id": "6f971f36",
    "metadata": {},
    "outputs": [],
@@ -256,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "id": "4b77c68a",
    "metadata": {},
    "outputs": [
@@ -301,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "id": "02b4abd2",
    "metadata": {},
    "outputs": [
@@ -353,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "id": "7ccd9469",
    "metadata": {},
    "outputs": [],
@@ -371,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 57,
    "id": "642bceb0",
    "metadata": {},
    "outputs": [
@@ -419,14 +411,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 58,
    "id": "565da6dc",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_cleaned = df_with_target.drop([\"Time_of_Day_Night\",\n",
     "                           \"Time_of_Day_Evening\",\n",
-    "                           \"Passenger_Count\", \n",
     "                           \"Time_of_Day_Morning\",\n",
     "                           \"Day_of_Week_Weekend\",\n",
     "                           \"Traffic_Conditions_Low\",\n",
@@ -435,6 +426,7 @@
     "                           axis=\"columns\"\n",
     "                           )\n",
     "\n",
+    "#\"Passenger_Count\", \n",
     "# \"Weather_Rain\",\n",
     "# \"Base_Fare\",\n",
     "# \"Day_of_Week_Weekday\",\n",
@@ -452,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
    "id": "9d50010b",
    "metadata": {},
    "outputs": [],
@@ -465,7 +457,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "taxi-prediction-fullstack-stefan-lundberg-opa24-1",
+   "display_name": "taxi-prediction-fullstack-stefan-lundberg-opa24 (3.13.7)",
    "language": "python",
    "name": "python3"
   },
@@ -479,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
