--- a/explorations/eda.ipynb
+++ b/explorations/eda.ipynb
@@ -791,7 +791,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "taxi-prediction-fullstack-stefan-lundberg-opa24-1",
+   "display_name": "taxi-prediction-fullstack-stefan-lundberg-opa24 (3.13.7)",
    "language": "python",
    "name": "python3"
   },
@@ -805,7 +805,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
