model_data_path and setup refactored

--- a/explorations/model.ipynb
+++ b/explorations/model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "bfe0abd6",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
        "4                     True         False         False     15.6180  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,6 +169,7 @@
     "from taxipred.utils.constants import get_clean_data\n",
     "from Cleaning_functions import split_features_target\n",
     "from model_functions import cv_test_benchmark\n",
+    "from taxipred.utils.constants import TAXI_MODEL_PATH\n",
     "\n",
     "df = get_clean_data()\n",
     "df.head()"
@@ -184,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "34c506a7",
    "metadata": {},
    "outputs": [
@@ -277,7 +278,7 @@
        "4         False         False  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9abdab0d",
    "metadata": {},
    "outputs": [
@@ -426,7 +427,7 @@
        "4                     True         False         False  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "da29b75e",
    "metadata": {},
    "outputs": [
@@ -455,7 +456,7 @@
        "Name: Trip_Price, dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1d2bd7e9",
    "metadata": {},
    "outputs": [
@@ -484,7 +485,7 @@
        "((800, 11), (200, 11))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a2eafa77",
    "metadata": {},
    "outputs": [],
@@ -546,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "7255d421",
    "metadata": {},
    "outputs": [],
@@ -556,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "403b7dfb",
    "metadata": {},
    "outputs": [
@@ -603,7 +604,7 @@
        "      <td>4.981</td>\n",
        "      <td>54.979</td>\n",
        "      <td>7.415</td>\n",
-       "      <td>0.81</td>\n",
+       "      <td>1.13</td>\n",
        "      <td>{'model__learning_rate': 0.05, 'model__max_dep...</td>\n",
        "      <td>(StandardScaler(), XGBRegressor(base_score=Non...</td>\n",
        "    </tr>\n",
@@ -616,7 +617,7 @@
        "      <td>5.497</td>\n",
        "      <td>58.358</td>\n",
        "      <td>7.639</td>\n",
-       "      <td>2.17</td>\n",
+       "      <td>2.40</td>\n",
        "      <td>{'model__max_depth': None, 'model__n_estimator...</td>\n",
        "      <td>((DecisionTreeRegressor(max_features=1.0, rand...</td>\n",
        "    </tr>\n",
@@ -629,7 +630,7 @@
        "      <td>6.716</td>\n",
        "      <td>86.814</td>\n",
        "      <td>9.317</td>\n",
-       "      <td>0.16</td>\n",
+       "      <td>0.15</td>\n",
        "      <td>{'model__C': 10, 'model__kernel': 'linear'}</td>\n",
        "      <td>(StandardScaler(), SVR(C=10, kernel='linear'))</td>\n",
        "    </tr>\n",
@@ -655,7 +656,7 @@
        "      <td>6.942</td>\n",
        "      <td>88.697</td>\n",
        "      <td>9.418</td>\n",
-       "      <td>1.81</td>\n",
+       "      <td>1.95</td>\n",
        "      <td>{'model__alpha': 1.0}</td>\n",
        "      <td>(StandardScaler(), Ridge())</td>\n",
        "    </tr>\n",
@@ -668,7 +669,7 @@
        "      <td>6.940</td>\n",
        "      <td>88.714</td>\n",
        "      <td>9.419</td>\n",
-       "      <td>2.43</td>\n",
+       "      <td>2.42</td>\n",
        "      <td>{'model__fit_intercept': True}</td>\n",
        "      <td>(StandardScaler(), LinearRegression())</td>\n",
        "    </tr>\n",
@@ -700,12 +701,12 @@
        "3     knn  0.569    0.680          0.111    10.931   194.437     13.944   \n",
        "\n",
        "   train_time_sec                                        best_params  \\\n",
-       "5            0.81  {'model__learning_rate': 0.05, 'model__max_dep...   \n",
-       "6            2.17  {'model__max_depth': None, 'model__n_estimator...   \n",
-       "4            0.16        {'model__C': 10, 'model__kernel': 'linear'}   \n",
+       "5            1.13  {'model__learning_rate': 0.05, 'model__max_dep...   \n",
+       "6            2.40  {'model__max_depth': None, 'model__n_estimator...   \n",
+       "4            0.15        {'model__C': 10, 'model__kernel': 'linear'}   \n",
        "2            0.04                              {'model__alpha': 0.1}   \n",
-       "1            1.81                              {'model__alpha': 1.0}   \n",
-       "0            2.43                     {'model__fit_intercept': True}   \n",
+       "1            1.95                              {'model__alpha': 1.0}   \n",
+       "0            2.42                     {'model__fit_intercept': True}   \n",
        "3            0.07                          {'model__n_neighbors': 7}   \n",
        "\n",
        "                                      best_estimator  \n",
@@ -718,7 +719,7 @@
        "3  (StandardScaler(), KNeighborsRegressor(n_neigh...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "c3c4e683",
    "metadata": {},
    "outputs": [],
@@ -761,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "170c1e4b",
    "metadata": {},
    "outputs": [
@@ -1827,7 +1828,7 @@
        "                              num_parallel_tree=None, ...))])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1846,24 +1847,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "0aab9f33",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['models/xgb_model.joblib']"
+       "['C:\\\\Users\\\\metal\\\\Skola\\\\course\\\\taxi-prediction-fullstack-stefan-lundberg-opa24\\\\src\\\\taxipred\\\\models\\\\xgb_model.joblib']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Export model\n",
-    "joblib.dump(xgb_model, \"models/xgb_model.joblib\")"
+    "joblib.dump(xgb_model, TAXI_MODEL_PATH)"
    ]
   }
  ],
