--- a/explorations/data_cleaning.ipynb
+++ b/explorations/data_cleaning.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "id": "f60e5763",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "id": "1b1db0bf",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
        "4                  22.64  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "80a2438a",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "id": "dd3dbaa5",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "id": "1cbff0b2",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "6f971f36",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "id": "4b77c68a",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "02b4abd2",
    "metadata": {},
    "outputs": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "id": "7ccd9469",
    "metadata": {},
    "outputs": [],
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "id": "642bceb0",
    "metadata": {},
    "outputs": [
@@ -411,10 +411,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "id": "565da6dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column                   Non-Null Count  Dtype  \n",
+      "---  ------                   --------------  -----  \n",
+      " 0   Trip_Distance_km         1000 non-null   float64\n",
+      " 1   Passenger_Count          1000 non-null   float64\n",
+      " 2   Base_Fare                1000 non-null   float64\n",
+      " 3   Per_Km_Rate              1000 non-null   float64\n",
+      " 4   Per_Minute_Rate          1000 non-null   float64\n",
+      " 5   Trip_Duration_Minutes    1000 non-null   float64\n",
+      " 6   Time_of_Day_Afternoon    1000 non-null   bool   \n",
+      " 7   Day_of_Week_Weekday      1000 non-null   bool   \n",
+      " 8   Traffic_Conditions_High  1000 non-null   bool   \n",
+      " 9   Weather_Rain             1000 non-null   bool   \n",
+      " 10  Weather_Snow             1000 non-null   bool   \n",
+      " 11  Trip_Price               1000 non-null   float64\n",
+      "dtypes: bool(5), float64(7)\n",
+      "memory usage: 59.7 KB\n"
+     ]
+    }
+   ],
    "source": [
     "df_cleaned = df_with_target.drop([\"Time_of_Day_Night\",\n",
     "                           \"Time_of_Day_Evening\",\n",
@@ -426,12 +452,7 @@
     "                           axis=\"columns\"\n",
     "                           )\n",
     "\n",
-    "#\"Passenger_Count\", \n",
-    "# \"Weather_Rain\",\n",
-    "# \"Base_Fare\",\n",
-    "# \"Day_of_Week_Weekday\",\n",
-    "# \"Time_of_Day_Afternoon\",\n",
-    "# \"Weather_Snow\","
+    "df_cleaned.info()"
    ]
   },
   {
@@ -444,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "id": "9d50010b",
    "metadata": {},
    "outputs": [],
