--- a/explorations/data_cleaning.ipynb
+++ b/explorations/data_cleaning.ipynb
@@ -293,46 +293,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "02b4abd2",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1000 entries, 0 to 999\n",
-      "Data columns (total 18 columns):\n",
-      " #   Column                     Non-Null Count  Dtype  \n",
-      "---  ------                     --------------  -----  \n",
-      " 0   Trip_Distance_km           1000 non-null   float64\n",
-      " 1   Passenger_Count            1000 non-null   float64\n",
-      " 2   Base_Fare                  1000 non-null   float64\n",
-      " 3   Per_Km_Rate                1000 non-null   float64\n",
-      " 4   Per_Minute_Rate            1000 non-null   float64\n",
-      " 5   Trip_Duration_Minutes      1000 non-null   float64\n",
-      " 6   Time_of_Day_Afternoon      1000 non-null   bool   \n",
-      " 7   Time_of_Day_Evening        1000 non-null   bool   \n",
-      " 8   Time_of_Day_Morning        1000 non-null   bool   \n",
-      " 9   Time_of_Day_Night          1000 non-null   bool   \n",
-      " 10  Day_of_Week_Weekday        1000 non-null   bool   \n",
-      " 11  Day_of_Week_Weekend        1000 non-null   bool   \n",
-      " 12  Traffic_Conditions_High    1000 non-null   bool   \n",
-      " 13  Traffic_Conditions_Low     1000 non-null   bool   \n",
-      " 14  Traffic_Conditions_Medium  1000 non-null   bool   \n",
-      " 15  Weather_Clear              1000 non-null   bool   \n",
-      " 16  Weather_Rain               1000 non-null   bool   \n",
-      " 17  Weather_Snow               1000 non-null   bool   \n",
-      "dtypes: bool(12), float64(6)\n",
-      "memory usage: 58.7 KB\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Trip_Distance_km</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>26.153327</td>\n",
+       "      <td>15.521566</td>\n",
+       "      <td>1.23</td>\n",
+       "      <td>13.1075</td>\n",
+       "      <td>26.995000</td>\n",
+       "      <td>37.7825</td>\n",
+       "      <td>74.795</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Passenger_Count</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>2.453000</td>\n",
+       "      <td>1.079331</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>2.0000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>3.0000</td>\n",
+       "      <td>4.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Base_Fare</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>3.502989</td>\n",
+       "      <td>0.848107</td>\n",
+       "      <td>2.01</td>\n",
+       "      <td>2.7700</td>\n",
+       "      <td>3.502989</td>\n",
+       "      <td>4.2025</td>\n",
+       "      <td>5.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Per_Km_Rate</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1.233316</td>\n",
+       "      <td>0.418922</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.8700</td>\n",
+       "      <td>1.233316</td>\n",
+       "      <td>1.5800</td>\n",
+       "      <td>2.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Per_Minute_Rate</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>0.292916</td>\n",
+       "      <td>0.112662</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.1975</td>\n",
+       "      <td>0.292916</td>\n",
+       "      <td>0.3825</td>\n",
+       "      <td>0.500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Trip_Duration_Minutes</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>62.118116</td>\n",
+       "      <td>31.339413</td>\n",
+       "      <td>5.01</td>\n",
+       "      <td>37.1075</td>\n",
+       "      <td>62.118116</td>\n",
+       "      <td>87.7750</td>\n",
+       "      <td>119.840</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        count       mean        std   min      25%        50%  \\\n",
+       "Trip_Distance_km       1000.0  26.153327  15.521566  1.23  13.1075  26.995000   \n",
+       "Passenger_Count        1000.0   2.453000   1.079331  1.00   2.0000   2.000000   \n",
+       "Base_Fare              1000.0   3.502989   0.848107  2.01   2.7700   3.502989   \n",
+       "Per_Km_Rate            1000.0   1.233316   0.418922  0.50   0.8700   1.233316   \n",
+       "Per_Minute_Rate        1000.0   0.292916   0.112662  0.10   0.1975   0.292916   \n",
+       "Trip_Duration_Minutes  1000.0  62.118116  31.339413  5.01  37.1075  62.118116   \n",
+       "\n",
+       "                           75%      max  \n",
+       "Trip_Distance_km       37.7825   74.795  \n",
+       "Passenger_Count         3.0000    4.000  \n",
+       "Base_Fare               4.2025    5.000  \n",
+       "Per_Km_Rate             1.5800    2.000  \n",
+       "Per_Minute_Rate         0.3825    0.500  \n",
+       "Trip_Duration_Minutes  87.7750  119.840  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "df_clean = pd.concat([df_clipped_numeric, dummy_categoric_features], axis=1)\n",
     "\n",
-    "df_clean.info()"
+    "df_clean.describe().T"
    ]
   },
   {
@@ -411,34 +504,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "565da6dc",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1000 entries, 0 to 999\n",
-      "Data columns (total 12 columns):\n",
-      " #   Column                   Non-Null Count  Dtype  \n",
-      "---  ------                   --------------  -----  \n",
-      " 0   Trip_Distance_km         1000 non-null   float64\n",
-      " 1   Passenger_Count          1000 non-null   float64\n",
-      " 2   Base_Fare                1000 non-null   float64\n",
-      " 3   Per_Km_Rate              1000 non-null   float64\n",
-      " 4   Per_Minute_Rate          1000 non-null   float64\n",
-      " 5   Trip_Duration_Minutes    1000 non-null   float64\n",
-      " 6   Time_of_Day_Afternoon    1000 non-null   bool   \n",
-      " 7   Day_of_Week_Weekday      1000 non-null   bool   \n",
-      " 8   Traffic_Conditions_High  1000 non-null   bool   \n",
-      " 9   Weather_Rain             1000 non-null   bool   \n",
-      " 10  Weather_Snow             1000 non-null   bool   \n",
-      " 11  Trip_Price               1000 non-null   float64\n",
-      "dtypes: bool(5), float64(7)\n",
-      "memory usage: 59.7 KB\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Trip_Distance_km</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>26.153327</td>\n",
+       "      <td>15.521566</td>\n",
+       "      <td>1.2300</td>\n",
+       "      <td>13.10750</td>\n",
+       "      <td>26.995000</td>\n",
+       "      <td>37.78250</td>\n",
+       "      <td>74.7950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Passenger_Count</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>2.453000</td>\n",
+       "      <td>1.079331</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>2.00000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>3.00000</td>\n",
+       "      <td>4.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Base_Fare</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>3.502989</td>\n",
+       "      <td>0.848107</td>\n",
+       "      <td>2.0100</td>\n",
+       "      <td>2.77000</td>\n",
+       "      <td>3.502989</td>\n",
+       "      <td>4.20250</td>\n",
+       "      <td>5.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Per_Km_Rate</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1.233316</td>\n",
+       "      <td>0.418922</td>\n",
+       "      <td>0.5000</td>\n",
+       "      <td>0.87000</td>\n",
+       "      <td>1.233316</td>\n",
+       "      <td>1.58000</td>\n",
+       "      <td>2.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Per_Minute_Rate</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>0.292916</td>\n",
+       "      <td>0.112662</td>\n",
+       "      <td>0.1000</td>\n",
+       "      <td>0.19750</td>\n",
+       "      <td>0.292916</td>\n",
+       "      <td>0.38250</td>\n",
+       "      <td>0.5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Trip_Duration_Minutes</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>62.118116</td>\n",
+       "      <td>31.339413</td>\n",
+       "      <td>5.0100</td>\n",
+       "      <td>37.10750</td>\n",
+       "      <td>62.118116</td>\n",
+       "      <td>87.77500</td>\n",
+       "      <td>119.8400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Trip_Price</th>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>53.616300</td>\n",
+       "      <td>25.121194</td>\n",
+       "      <td>6.1269</td>\n",
+       "      <td>34.57885</td>\n",
+       "      <td>52.617000</td>\n",
+       "      <td>67.47665</td>\n",
+       "      <td>122.1344</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        count       mean        std     min       25%  \\\n",
+       "Trip_Distance_km       1000.0  26.153327  15.521566  1.2300  13.10750   \n",
+       "Passenger_Count        1000.0   2.453000   1.079331  1.0000   2.00000   \n",
+       "Base_Fare              1000.0   3.502989   0.848107  2.0100   2.77000   \n",
+       "Per_Km_Rate            1000.0   1.233316   0.418922  0.5000   0.87000   \n",
+       "Per_Minute_Rate        1000.0   0.292916   0.112662  0.1000   0.19750   \n",
+       "Trip_Duration_Minutes  1000.0  62.118116  31.339413  5.0100  37.10750   \n",
+       "Trip_Price             1000.0  53.616300  25.121194  6.1269  34.57885   \n",
+       "\n",
+       "                             50%       75%       max  \n",
+       "Trip_Distance_km       26.995000  37.78250   74.7950  \n",
+       "Passenger_Count         2.000000   3.00000    4.0000  \n",
+       "Base_Fare               3.502989   4.20250    5.0000  \n",
+       "Per_Km_Rate             1.233316   1.58000    2.0000  \n",
+       "Per_Minute_Rate         0.292916   0.38250    0.5000  \n",
+       "Trip_Duration_Minutes  62.118116  87.77500  119.8400  \n",
+       "Trip_Price             52.617000  67.47665  122.1344  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -452,7 +657,7 @@
     "                           axis=\"columns\"\n",
     "                           )\n",
     "\n",
-    "df_cleaned.info()"
+    "df_cleaned.describe().T"
    ]
   },
   {
