--- a/explorations/data_cleaning.ipynb
+++ b/explorations/data_cleaning.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "f60e5763",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "1b1db0bf",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
        "4                  22.64  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,6 +146,49 @@
    "source": [
     "X, df_numeric, df_boolean, df_categorical, df_target, y = split_features_target(df)\n",
     "df_numeric.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e663d0b",
+   "metadata": {},
+   "source": [
+    "### saving rows with NaN in trip_price for prediction model input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "35370cab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 49 entries, 1 to 991\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   Trip_Distance_km       49 non-null     float64\n",
+      " 1   Time_of_Day            48 non-null     object \n",
+      " 2   Day_of_Week            45 non-null     object \n",
+      " 3   Passenger_Count        47 non-null     float64\n",
+      " 4   Traffic_Conditions     49 non-null     object \n",
+      " 5   Weather                45 non-null     object \n",
+      " 6   Base_Fare              43 non-null     float64\n",
+      " 7   Per_Km_Rate            43 non-null     float64\n",
+      " 8   Per_Minute_Rate        48 non-null     float64\n",
+      " 9   Trip_Duration_Minutes  45 non-null     float64\n",
+      "dtypes: float64(6), object(4)\n",
+      "memory usage: 4.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_missing_label = df[df[\"Trip_Price\"].isna()].drop(columns=[\"Trip_Price\"])\n",
+    "df_missing_label.info()"
    ]
   },
   {
@@ -158,12 +201,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "id": "80a2438a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 1 columns):\n",
+      " #   Column      Non-Null Count  Dtype  \n",
+      "---  ------      --------------  -----  \n",
+      " 0   Trip_Price  951 non-null    float64\n",
+      "dtypes: float64(1)\n",
+      "memory usage: 7.9 KB\n"
+     ]
+    }
+   ],
    "source": [
-    "df_clipped_target = handle_outliers(df_target)"
+    "df_clipped_target = handle_outliers(df_target)\n",
+    "df_clipped_target.info()"
    ]
   },
   {
@@ -176,30 +235,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "id": "dd3dbaa5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1000 entries, 0 to 999\n",
-      "Data columns (total 1 columns):\n",
-      " #   Column      Non-Null Count  Dtype  \n",
-      "---  ------      --------------  -----  \n",
-      " 0   Trip_Price  1000 non-null   float64\n",
-      "dtypes: float64(1)\n",
-      "memory usage: 7.9 KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_filled_target = fillna_mean_median(df_clipped_target)\n",
-    "\n",
-    "df_filled_numeric = fillna_mean_median(df_numeric)      \n",
-    "df_filled_target.info()  "
+    "df_filled_numeric = fillna_mean_median(df_numeric)"
    ]
   },
   {
@@ -212,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "id": "1cbff0b2",
    "metadata": {},
    "outputs": [],
@@ -230,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "id": "6f971f36",
    "metadata": {},
    "outputs": [],
@@ -248,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "id": "4b77c68a",
    "metadata": {},
    "outputs": [
@@ -293,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "id": "02b4abd2",
    "metadata": {},
    "outputs": [
@@ -417,7 +458,7 @@
        "Trip_Duration_Minutes  87.7750  119.840  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "id": "7ccd9469",
    "metadata": {},
    "outputs": [],
@@ -456,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "id": "642bceb0",
    "metadata": {},
    "outputs": [
@@ -504,151 +545,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "id": "565da6dc",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>count</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>std</th>\n",
-       "      <th>min</th>\n",
-       "      <th>25%</th>\n",
-       "      <th>50%</th>\n",
-       "      <th>75%</th>\n",
-       "      <th>max</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Trip_Distance_km</th>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>26.153327</td>\n",
-       "      <td>15.521566</td>\n",
-       "      <td>1.2300</td>\n",
-       "      <td>13.10750</td>\n",
-       "      <td>26.995000</td>\n",
-       "      <td>37.78250</td>\n",
-       "      <td>74.7950</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Passenger_Count</th>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>2.453000</td>\n",
-       "      <td>1.079331</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>2.00000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>3.00000</td>\n",
-       "      <td>4.0000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Base_Fare</th>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>3.502989</td>\n",
-       "      <td>0.848107</td>\n",
-       "      <td>2.0100</td>\n",
-       "      <td>2.77000</td>\n",
-       "      <td>3.502989</td>\n",
-       "      <td>4.20250</td>\n",
-       "      <td>5.0000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Per_Km_Rate</th>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>1.233316</td>\n",
-       "      <td>0.418922</td>\n",
-       "      <td>0.5000</td>\n",
-       "      <td>0.87000</td>\n",
-       "      <td>1.233316</td>\n",
-       "      <td>1.58000</td>\n",
-       "      <td>2.0000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Per_Minute_Rate</th>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>0.292916</td>\n",
-       "      <td>0.112662</td>\n",
-       "      <td>0.1000</td>\n",
-       "      <td>0.19750</td>\n",
-       "      <td>0.292916</td>\n",
-       "      <td>0.38250</td>\n",
-       "      <td>0.5000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Trip_Duration_Minutes</th>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>62.118116</td>\n",
-       "      <td>31.339413</td>\n",
-       "      <td>5.0100</td>\n",
-       "      <td>37.10750</td>\n",
-       "      <td>62.118116</td>\n",
-       "      <td>87.77500</td>\n",
-       "      <td>119.8400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Trip_Price</th>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>53.616300</td>\n",
-       "      <td>25.121194</td>\n",
-       "      <td>6.1269</td>\n",
-       "      <td>34.57885</td>\n",
-       "      <td>52.617000</td>\n",
-       "      <td>67.47665</td>\n",
-       "      <td>122.1344</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        count       mean        std     min       25%  \\\n",
-       "Trip_Distance_km       1000.0  26.153327  15.521566  1.2300  13.10750   \n",
-       "Passenger_Count        1000.0   2.453000   1.079331  1.0000   2.00000   \n",
-       "Base_Fare              1000.0   3.502989   0.848107  2.0100   2.77000   \n",
-       "Per_Km_Rate            1000.0   1.233316   0.418922  0.5000   0.87000   \n",
-       "Per_Minute_Rate        1000.0   0.292916   0.112662  0.1000   0.19750   \n",
-       "Trip_Duration_Minutes  1000.0  62.118116  31.339413  5.0100  37.10750   \n",
-       "Trip_Price             1000.0  53.616300  25.121194  6.1269  34.57885   \n",
-       "\n",
-       "                             50%       75%       max  \n",
-       "Trip_Distance_km       26.995000  37.78250   74.7950  \n",
-       "Passenger_Count         2.000000   3.00000    4.0000  \n",
-       "Base_Fare               3.502989   4.20250    5.0000  \n",
-       "Per_Km_Rate             1.233316   1.58000    2.0000  \n",
-       "Per_Minute_Rate         0.292916   0.38250    0.5000  \n",
-       "Trip_Duration_Minutes  62.118116  87.77500  119.8400  \n",
-       "Trip_Price             52.617000  67.47665  122.1344  "
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                   Non-Null Count  Dtype  \n",
+      "---  ------                   --------------  -----  \n",
+      " 0   Trip_Distance_km         1000 non-null   float64\n",
+      " 1   Passenger_Count          1000 non-null   float64\n",
+      " 2   Base_Fare                1000 non-null   float64\n",
+      " 3   Per_Km_Rate              1000 non-null   float64\n",
+      " 4   Per_Minute_Rate          1000 non-null   float64\n",
+      " 5   Trip_Duration_Minutes    1000 non-null   float64\n",
+      " 6   Time_of_Day_Afternoon    1000 non-null   bool   \n",
+      " 7   Time_of_Day_Evening      1000 non-null   bool   \n",
+      " 8   Day_of_Week_Weekday      1000 non-null   bool   \n",
+      " 9   Traffic_Conditions_High  1000 non-null   bool   \n",
+      " 10  Weather_Rain             1000 non-null   bool   \n",
+      " 11  Weather_Snow             1000 non-null   bool   \n",
+      " 12  Trip_Price               1000 non-null   float64\n",
+      "dtypes: bool(6), float64(7)\n",
+      "memory usage: 60.7 KB\n"
+     ]
     }
    ],
    "source": [
     "df_cleaned = df_with_target.drop([\"Time_of_Day_Night\",\n",
-    "                           \"Time_of_Day_Evening\",\n",
     "                           \"Time_of_Day_Morning\",\n",
     "                           \"Day_of_Week_Weekend\",\n",
     "                           \"Traffic_Conditions_Low\",\n",
@@ -657,7 +586,7 @@
     "                           axis=\"columns\"\n",
     "                           )\n",
     "\n",
-    "df_cleaned.describe().T"
+    "df_cleaned.info()"
    ]
   },
   {
@@ -670,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "id": "9d50010b",
    "metadata": {},
    "outputs": [],
