changed export missing labels csv to json

--- a/explorations/data_cleaning.ipynb
+++ b/explorations/data_cleaning.ipynb
@@ -658,9 +658,9 @@
     "\n",
     "df_cleaned.to_csv(export_path, index=False)\n",
     "\n",
-    "export_path = \"../src/taxipred/data/missing_label.csv\"\n",
+    "export_path = \"../src/taxipred/data/missing_label.json\"\n",
     "\n",
-    "df_missing_label.to_csv(export_path, index=False)"
+    "df_missing_label.to_json(export_path, index=False)"
    ]
   }
  ],
