--- a/explorations/model.ipynb
+++ b/explorations/model.ipynb
@@ -686,12 +686,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "c3c4e683",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# selecting model of choice XGB\n",
+    "# model of choice XGB\n",
     "xgb_row = df_results.loc[df_results[\"model\"] == \"xgb\"].iloc[0]\n",
     "xgb_model = xgb_row[\"best_estimator\"]"
    ]
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "170c1e4b",
    "metadata": {},
    "outputs": [
@@ -1778,7 +1778,7 @@
     }
    ],
    "source": [
-    "xgb_model.fit(X_train, y_train) # move to function?"
+    "xgb_model.fit(X_train, y_train)"
    ]
   },
   {
