changed  params export to json. added path / method in constants

--- a/explorations/data_cleaning.ipynb
+++ b/explorations/data_cleaning.ipynb
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "9d50010b",
    "metadata": {},
    "outputs": [],
@@ -660,7 +660,7 @@
     "\n",
     "export_path = \"../src/taxipred/data/missing_label.json\"\n",
     "\n",
-    "df_missing_label.to_json(export_path, index=False)"
+    "df_missing_label.to_json(export_path, orient=\"records\", lines=False)\n"
    ]
   }
  ],
