cleaned missing labels in separate .py & started with api/predict/missing labels (not done)

--- a/explorations/data_cleaning.ipynb
+++ b/explorations/data_cleaning.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "f60e5763",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "1b1db0bf",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
        "4                  22.64  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,156 +146,6 @@
    "source": [
     "X, df_numeric, df_boolean, df_categorical, df_target = split_features_target(df)\n",
     "df_numeric.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8e663d0b",
-   "metadata": {},
-   "source": [
-    "### create dataframe rows with NaN in trip_price for prediction model input"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "35370cab",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Trip_Distance_km</th>\n",
-       "      <th>Time_of_Day</th>\n",
-       "      <th>Day_of_Week</th>\n",
-       "      <th>Passenger_Count</th>\n",
-       "      <th>Traffic_Conditions</th>\n",
-       "      <th>Weather</th>\n",
-       "      <th>Base_Fare</th>\n",
-       "      <th>Per_Km_Rate</th>\n",
-       "      <th>Per_Minute_Rate</th>\n",
-       "      <th>Trip_Duration_Minutes</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>47.59</td>\n",
-       "      <td>Afternoon</td>\n",
-       "      <td>Weekday</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Clear</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.62</td>\n",
-       "      <td>0.43</td>\n",
-       "      <td>40.57</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>30.45</td>\n",
-       "      <td>Morning</td>\n",
-       "      <td>Weekday</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Clear</td>\n",
-       "      <td>2.77</td>\n",
-       "      <td>1.78</td>\n",
-       "      <td>0.34</td>\n",
-       "      <td>110.33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>48.53</td>\n",
-       "      <td>Night</td>\n",
-       "      <td>Weekday</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>Clear</td>\n",
-       "      <td>4.78</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>79.94</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>4.19</td>\n",
-       "      <td>Morning</td>\n",
-       "      <td>Weekday</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>Clear</td>\n",
-       "      <td>4.07</td>\n",
-       "      <td>1.89</td>\n",
-       "      <td>0.19</td>\n",
-       "      <td>69.06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>38.78</td>\n",
-       "      <td>Morning</td>\n",
-       "      <td>Weekday</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Medium</td>\n",
-       "      <td>Clear</td>\n",
-       "      <td>3.08</td>\n",
-       "      <td>1.62</td>\n",
-       "      <td>0.15</td>\n",
-       "      <td>90.14</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Trip_Distance_km Time_of_Day Day_of_Week  Passenger_Count  \\\n",
-       "1              47.59   Afternoon     Weekday              1.0   \n",
-       "8              30.45     Morning     Weekday              3.0   \n",
-       "11             48.53       Night     Weekday              3.0   \n",
-       "32              4.19     Morning     Weekday              1.0   \n",
-       "94             38.78     Morning     Weekday              3.0   \n",
-       "\n",
-       "   Traffic_Conditions Weather  Base_Fare  Per_Km_Rate  Per_Minute_Rate  \\\n",
-       "1                High   Clear        NaN         0.62             0.43   \n",
-       "8                High   Clear       2.77         1.78             0.34   \n",
-       "11                Low   Clear       4.78          NaN             0.50   \n",
-       "32                Low   Clear       4.07         1.89             0.19   \n",
-       "94             Medium   Clear       3.08         1.62             0.15   \n",
-       "\n",
-       "    Trip_Duration_Minutes  \n",
-       "1                   40.57  \n",
-       "8                  110.33  \n",
-       "11                  79.94  \n",
-       "32                  69.06  \n",
-       "94                  90.14  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_missing_label = df[df[\"Trip_Price\"].isna()].drop(columns=[\"Trip_Price\"])\n",
-    "df_missing_label.head()"
    ]
   },
   {
@@ -308,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "80a2438a",
    "metadata": {},
    "outputs": [
@@ -334,39 +184,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f303d969",
+   "id": "74ca97b2",
    "metadata": {},
    "source": [
-    "### Filling nulls with median or mean depending on value\n"
+    "### Handle outliers in the numeric columns "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
+   "id": "1cbff0b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clipped_numeric = handle_outliers(df_numeric)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f303d969",
+   "metadata": {},
+   "source": [
+    "### Filling NaN with median or mean depending on value\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "dd3dbaa5",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_filled_target = fillna_mean_median(df_clipped_target)\n",
-    "df_filled_numeric = fillna_mean_median(df_numeric)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "74ca97b2",
-   "metadata": {},
-   "source": [
-    "### Handle missing values and outliers in the numeric columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "1cbff0b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_clipped_numeric = handle_outliers(df_filled_numeric)"
+    "df_filled_numeric = fillna_mean_median(df_clipped_numeric) "
    ]
   },
   {
@@ -379,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "id": "6f971f36",
    "metadata": {},
    "outputs": [],
@@ -397,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "id": "4b77c68a",
    "metadata": {},
    "outputs": [
@@ -442,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "id": "02b4abd2",
    "metadata": {},
    "outputs": [
@@ -455,12 +305,12 @@
       "Data columns (total 18 columns):\n",
       " #   Column                     Non-Null Count  Dtype  \n",
       "---  ------                     --------------  -----  \n",
-      " 0   Trip_Distance_km           1000 non-null   float64\n",
-      " 1   Passenger_Count            1000 non-null   float64\n",
-      " 2   Base_Fare                  1000 non-null   float64\n",
-      " 3   Per_Km_Rate                1000 non-null   float64\n",
-      " 4   Per_Minute_Rate            1000 non-null   float64\n",
-      " 5   Trip_Duration_Minutes      1000 non-null   float64\n",
+      " 0   Trip_Distance_km           950 non-null    float64\n",
+      " 1   Passenger_Count            950 non-null    float64\n",
+      " 2   Base_Fare                  950 non-null    float64\n",
+      " 3   Per_Km_Rate                950 non-null    float64\n",
+      " 4   Per_Minute_Rate            950 non-null    float64\n",
+      " 5   Trip_Duration_Minutes      950 non-null    float64\n",
       " 6   Time_of_Day_Afternoon      1000 non-null   bool   \n",
       " 7   Time_of_Day_Evening        1000 non-null   bool   \n",
       " 8   Time_of_Day_Morning        1000 non-null   bool   \n",
@@ -494,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "id": "7ccd9469",
    "metadata": {},
    "outputs": [
@@ -507,12 +357,12 @@
       "Data columns (total 19 columns):\n",
       " #   Column                     Non-Null Count  Dtype  \n",
       "---  ------                     --------------  -----  \n",
-      " 0   Trip_Distance_km           1000 non-null   float64\n",
-      " 1   Passenger_Count            1000 non-null   float64\n",
-      " 2   Base_Fare                  1000 non-null   float64\n",
-      " 3   Per_Km_Rate                1000 non-null   float64\n",
-      " 4   Per_Minute_Rate            1000 non-null   float64\n",
-      " 5   Trip_Duration_Minutes      1000 non-null   float64\n",
+      " 0   Trip_Distance_km           950 non-null    float64\n",
+      " 1   Passenger_Count            950 non-null    float64\n",
+      " 2   Base_Fare                  950 non-null    float64\n",
+      " 3   Per_Km_Rate                950 non-null    float64\n",
+      " 4   Per_Minute_Rate            950 non-null    float64\n",
+      " 5   Trip_Duration_Minutes      950 non-null    float64\n",
       " 6   Time_of_Day_Afternoon      1000 non-null   bool   \n",
       " 7   Time_of_Day_Evening        1000 non-null   bool   \n",
       " 8   Time_of_Day_Morning        1000 non-null   bool   \n",
@@ -546,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "id": "642bceb0",
    "metadata": {},
    "outputs": [
@@ -556,14 +406,14 @@
      "text": [
       "                           Trip_Price\n",
       "Trip_Price                   1.000000\n",
-      "Trip_Distance_km             0.717884\n",
-      "Per_Km_Rate                  0.381859\n",
-      "Trip_Duration_Minutes        0.318678\n",
-      "Per_Minute_Rate              0.226293\n",
+      "Trip_Distance_km             0.735285\n",
+      "Per_Km_Rate                  0.390570\n",
+      "Trip_Duration_Minutes        0.325427\n",
+      "Per_Minute_Rate              0.232643\n",
       "Traffic_Conditions_High      0.059150\n",
-      "Base_Fare                    0.046055\n",
+      "Base_Fare                    0.047286\n",
       "Weather_Rain                 0.026548\n",
-      "Passenger_Count              0.020573\n",
+      "Passenger_Count              0.020611\n",
       "Day_of_Week_Weekday          0.020459\n",
       "Weather_Snow                 0.019309\n",
       "Time_of_Day_Evening          0.005622\n",
@@ -594,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "id": "565da6dc",
    "metadata": {},
    "outputs": [
@@ -607,11 +457,11 @@
       "Data columns (total 11 columns):\n",
       " #   Column                   Non-Null Count  Dtype  \n",
       "---  ------                   --------------  -----  \n",
-      " 0   Trip_Distance_km         1000 non-null   float64\n",
-      " 1   Base_Fare                1000 non-null   float64\n",
-      " 2   Per_Km_Rate              1000 non-null   float64\n",
-      " 3   Per_Minute_Rate          1000 non-null   float64\n",
-      " 4   Trip_Duration_Minutes    1000 non-null   float64\n",
+      " 0   Trip_Distance_km         950 non-null    float64\n",
+      " 1   Base_Fare                950 non-null    float64\n",
+      " 2   Per_Km_Rate              950 non-null    float64\n",
+      " 3   Per_Minute_Rate          950 non-null    float64\n",
+      " 4   Trip_Duration_Minutes    950 non-null    float64\n",
       " 5   Time_of_Day_Afternoon    1000 non-null   bool   \n",
       " 6   Day_of_Week_Weekday      1000 non-null   bool   \n",
       " 7   Traffic_Conditions_High  1000 non-null   bool   \n",
@@ -649,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "9d50010b",
    "metadata": {},
    "outputs": [],
@@ -658,9 +508,7 @@
     "\n",
     "df_cleaned.to_csv(export_path, index=False)\n",
     "\n",
-    "export_path = \"../src/taxipred/data/missing_label.json\"\n",
-    "\n",
-    "df_missing_label.to_json(export_path, orient=\"records\", lines=False)\n"
+    "\n"
    ]
   }
  ],
